--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
@@ -50,6 +50,7 @@
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.5",
+    "react-test-renderer": "^19.1.0",
     "typescript": "~5.8.3"
   },
   "private": true
