--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "costco-schedule-app",
+  "name": "gotime-schedule",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -12,7 +12,13 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
+    "prebuild": "npx expo prebuild",
+    "build:ios": "npx expo run:ios --configuration Release",
+    "build:android": "npx expo run:android --variant release"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
