--- a/ios/costcoscheduleapp/Info.plist
+++ b/ios/costcoscheduleapp/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>costco-schedule-app</string>
+    <string>GoTime Schedule</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,7 +27,13 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>com.costco.scheduleapp</string>
+          <string>com.gotime.scheduleapp</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+gotime-schedule</string>
         </array>
       </dict>
     </array>
