--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "versionCode": 1
+      "versionCode": 1,
+      "package": "com.gotime.scheduleapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
