--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gotime-schedule",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -27,6 +27,7 @@
     "expo": "~53.0.9",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "^17.1.6",
+    "expo-crypto": "^14.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-device": "^7.1.4",
     "expo-notifications": "^0.31.2",
