--- a/app.json
+++ b/app.json
@@ -7,15 +7,34 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "description": "Secure employee schedule viewer with offline support for corporate portals",
+    "privacy": "unlisted",
+    "platforms": ["ios", "android"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.gotime.scheduleapp",
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "infoPlist": {
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": false,
+          "NSExceptionDomains": {
+            "costco.com": {
+              "NSExceptionAllowsInsecureHTTPLoads": false,
+              "NSExceptionMinimumTLSVersion": "1.2"
+            }
+          }
+        },
+        "NSUserNotificationUsageDescription": "This app sends notifications to remind you of upcoming work shifts.",
+        "NSFaceIDUsageDescription": "Use Face ID to securely access your stored credentials."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -24,14 +43,32 @@
       },
       "edgeToEdgeEnabled": true,
       "versionCode": 1,
-      "package": "com.gotime.scheduleapp"
+      "package": "com.gotime.scheduleapp",
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT"
+      ],
+      "usesCleartextTraffic": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
     "extra": {
       "appVersion": "1.0.0",
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "eas": {
+        "projectId": "your-project-id-here"
+      }
+    },
+    "owner": "your-expo-username",
+    "updates": {
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/your-project-id-here"
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
