fix lint errors by updting eslint configuration and running with --fix, and a few manual fixes

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "newArchEnabled": true,
     "description": "Secure employee schedule viewer with offline support for corporate portals",
     "privacy": "unlisted",
-    "platforms": ["ios", "android"],
+    "platforms": ["ios", "android", "web"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
